bug 76888: plaintext editor deletion can move/lose whitesapce.  r=sfraser; sr=kin